EXTRA/Proj1/ProgramParser.java
// Generated from Program.g4 by ANTLR 4.8

import java.util.*;
import java.util.HashMap; 
import java.util.Map; 
import java.util.Set;
import java.util.Iterator;
import java.lang.Math; 


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		DD=25, CO1=26, CO2=27, PARO=28, PARC=29, SEMC=30, BO1=31, BO2=32, BO3=33, 
		BO4=34, PO=35, ID=36, INT=37, WS=38;
	public static final int
		RULE_start = 0, RULE_statements = 1, RULE_progI = 2, RULE_comment = 3, 
		RULE_varI = 4, RULE_main_p = 5, RULE_sExprM = 6, RULE_varDef2 = 7, RULE_varWork = 8, 
		RULE_varDef = 9, RULE_wrT = 10, RULE_ifelse = 11, RULE_cond = 12, RULE_sExpr = 13, 
		RULE_expr = 14, RULE_exprS = 15, RULE_exprR = 16, RULE_exprI = 17, RULE_exprW2 = 18, 
		RULE_exprW = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statements", "progI", "comment", "varI", "main_p", "sExprM", 
			"varDef2", "varWork", "varDef", "wrT", "ifelse", "cond", "sExpr", "expr", 
			"exprS", "exprR", "exprI", "exprW2", "exprW"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "'begin'", "'end.'", "' : '", "'writeln('", "');'", "'readln('", 
			"'if'", "'then'", "'else'", "'='", "'*'", "'+'", "','", "'Sqrt'", "'Cos'", 
			"'Sin'", "'ln'", "'dopower'", "'/'", "'-'", "'''", "' '", "'!'", "':='", 
			null, null, "'('", "')'", "';'", "'TRUE'", "'FALSE'", "'true'", "'false'", 
			"'program'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "DD", "CO1", "CO2", "PARO", "PARC", "SEMC", "BO1", "BO2", "BO3", 
			"BO4", "PO", "ID", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Program.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Double count= 0.0;
	Boolean truth = true;
	HashMap<String, Double> Vt = new HashMap<String, Double>();
	HashMap<String,  Boolean> Vb =new HashMap<>();
	Scanner myObj = new Scanner(System.in);

	public ProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ProgramParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			statements();
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public ProgIContext progI() {
			return getRuleContext(ProgIContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public VarDefContext varDef() {
			return getRuleContext(VarDefContext.class,0);
		}
		public Main_pContext main_p() {
			return getRuleContext(Main_pContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case PO:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				progI();
				setState(45);
				statements();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				match(T__0);
				setState(48);
				varDef();
				setState(49);
				statements();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				main_p();
				}
				break;
			case CO1:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				comment();
				setState(53);
				statements();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgIContext extends ParserRuleContext {
		public TerminalNode PO() { return getToken(ProgramParser.PO, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public ProgIContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progI; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterProgI(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitProgI(this);
		}
	}

	public final ProgIContext progI() throws RecognitionException {
		ProgIContext _localctx = new ProgIContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_progI);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(PO);
			setState(58);
			expr(0);
			setState(59);
			match(SEMC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode CO1() { return getToken(ProgramParser.CO1, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CO2() { return getToken(ProgramParser.CO2, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitComment(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(CO1);
			setState(62);
			expr(0);
			setState(63);
			match(CO2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarIContext extends ParserRuleContext {
		public VarDef2Context varDef2() {
			return getRuleContext(VarDef2Context.class,0);
		}
		public VarIContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varI; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVarI(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVarI(this);
		}
	}

	public final VarIContext varI() throws RecognitionException {
		VarIContext _localctx = new VarIContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varI);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__0);
			setState(66);
			varDef2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_pContext extends ParserRuleContext {
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public Main_pContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterMain_p(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitMain_p(this);
		}
	}

	public final Main_pContext main_p() throws RecognitionException {
		Main_pContext _localctx = new Main_pContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main_p);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__1);
			setState(69);
			sExprM();
			setState(70);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SExprMContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public VarWorkContext varWork() {
			return getRuleContext(VarWorkContext.class,0);
		}
		public WrTContext wrT() {
			return getRuleContext(WrTContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public SExprMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sExprM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterSExprM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitSExprM(this);
		}
	}

	public final SExprMContext sExprM() throws RecognitionException {
		SExprMContext _localctx = new SExprMContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sExprM);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				comment();
				setState(74);
				sExprM();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				varWork();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				wrT();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				ifelse();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDef2Context extends ParserRuleContext {
		public ExprSContext exprS;
		public Token ID;
		public ExprSContext exprS() {
			return getRuleContext(ExprSContext.class,0);
		}
		public TerminalNode ID() { return getToken(ProgramParser.ID, 0); }
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public VarDef2Context varDef2() {
			return getRuleContext(VarDef2Context.class,0);
		}
		public VarDef2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVarDef2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVarDef2(this);
		}
	}

	public final VarDef2Context varDef2() throws RecognitionException {
		VarDef2Context _localctx = new VarDef2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_varDef2);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				((VarDef2Context)_localctx).exprS = exprS();
				setState(83);
				match(T__3);
				setState(84);
				((VarDef2Context)_localctx).ID = match(ID);
				setState(85);
				match(SEMC);

				                String ill = (((VarDef2Context)_localctx).ID!=null?((VarDef2Context)_localctx).ID.getText():null);
				                if(ill.equals("boolean"))
				                {Vb.put(((VarDef2Context)_localctx).exprS.i, truth);
				                System.out.println("B. " + ((VarDef2Context)_localctx).exprS.i + " " + ill);
				                }
				                else
				                {Vt.put(((VarDef2Context)_localctx).exprS.i, count);}
				                System.out.println("A. " + ((VarDef2Context)_localctx).exprS.i + " " + ill);
				            
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				((VarDef2Context)_localctx).exprS = exprS();
				setState(89);
				match(T__3);
				setState(90);
				((VarDef2Context)_localctx).ID = match(ID);
				setState(91);
				match(SEMC);

				                String ill = (((VarDef2Context)_localctx).ID!=null?((VarDef2Context)_localctx).ID.getText():null);
				                if(ill.equals("boolean"))
				                {Vb.put(((VarDef2Context)_localctx).exprS.i, truth);
				                System.out.println("B. " + ((VarDef2Context)_localctx).exprS.i + " " + ill);}
				                else
				                {Vt.put(((VarDef2Context)_localctx).exprS.i, count);
				                System.out.println("A. " + ((VarDef2Context)_localctx).exprS.i + " " + ill);
				            }
				setState(93);
				varDef2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarWorkContext extends ParserRuleContext {
		public ExprSContext exprS;
		public ExprIContext exprI;
		public Token e2;
		public ExprSContext exprS() {
			return getRuleContext(ExprSContext.class,0);
		}
		public TerminalNode DD() { return getToken(ProgramParser.DD, 0); }
		public ExprIContext exprI() {
			return getRuleContext(ExprIContext.class,0);
		}
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public TerminalNode BO1() { return getToken(ProgramParser.BO1, 0); }
		public TerminalNode BO2() { return getToken(ProgramParser.BO2, 0); }
		public TerminalNode BO3() { return getToken(ProgramParser.BO3, 0); }
		public TerminalNode BO4() { return getToken(ProgramParser.BO4, 0); }
		public VarWorkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varWork; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVarWork(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVarWork(this);
		}
	}

	public final VarWorkContext varWork() throws RecognitionException {
		VarWorkContext _localctx = new VarWorkContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varWork);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				((VarWorkContext)_localctx).exprS = exprS();
				setState(99);
				match(DD);
				setState(100);
				((VarWorkContext)_localctx).exprI = exprI(0);
				{
				setState(101);
				match(SEMC);
				}

				        System.out.println("This is your map: " + Vt.get(((VarWorkContext)_localctx).exprS.i));
				        Vt.replace(((VarWorkContext)_localctx).exprS.i, ((VarWorkContext)_localctx).exprI.i);
				        System.out.println("This is your map: " + Vt.get(((VarWorkContext)_localctx).exprS.i));
				        
				setState(103);
				sExprM();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				((VarWorkContext)_localctx).exprS = exprS();
				setState(106);
				match(DD);
				setState(107);
				((VarWorkContext)_localctx).e2 = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BO1) | (1L << BO2) | (1L << BO3) | (1L << BO4))) != 0)) ) {
					((VarWorkContext)_localctx).e2 = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(108);
				match(SEMC);
				  
				        if(((VarWorkContext)_localctx).e2.equals("true"))
				        {
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, true);
				        }
				         if(((VarWorkContext)_localctx).e2.equals("TRUE"))
				        {
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, true);
				        }
				        if(((VarWorkContext)_localctx).e2.equals("false"))
				        {
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, false);
				        }
				        if(((VarWorkContext)_localctx).e2.equals("FALSE"))
				        {
				            Vb.replace(((VarWorkContext)_localctx).exprS.i, false);
				        }
				        
				setState(110);
				sExprM();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public List<VarDef2Context> varDef2() {
			return getRuleContexts(VarDef2Context.class);
		}
		public VarDef2Context varDef2(int i) {
			return getRuleContext(VarDef2Context.class,i);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitVarDef(this);
		}
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varDef);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				varDef2();
				setState(116);
				varDef2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WrTContext extends ParserRuleContext {
		public ExprW2Context exprW2;
		public ExprW2Context exprW2() {
			return getRuleContext(ExprW2Context.class,0);
		}
		public SExprMContext sExprM() {
			return getRuleContext(SExprMContext.class,0);
		}
		public ExprRContext exprR() {
			return getRuleContext(ExprRContext.class,0);
		}
		public WrTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wrT; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterWrT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitWrT(this);
		}
	}

	public final WrTContext wrT() throws RecognitionException {
		WrTContext _localctx = new WrTContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_wrT);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__9:
			case SEMC:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				match(T__4);
				setState(122);
				((WrTContext)_localctx).exprW2 = exprW2();
				setState(123);
				match(T__5);
				System.out.println(((WrTContext)_localctx).exprW2.i);
				            
				setState(125);
				sExprM();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				match(T__6);
				setState(128);
				exprR(0);
				setState(129);
				match(T__5);
				setState(130);
				sExprM();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelseContext extends ParserRuleContext {
		public CondContext cond;
		public SExprMContext e;
		public SExprMContext el;
		public TerminalNode PARO() { return getToken(ProgramParser.PARO, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode PARC() { return getToken(ProgramParser.PARC, 0); }
		public TerminalNode SEMC() { return getToken(ProgramParser.SEMC, 0); }
		public List<SExprMContext> sExprM() {
			return getRuleContexts(SExprMContext.class);
		}
		public SExprMContext sExprM(int i) {
			return getRuleContext(SExprMContext.class,i);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterIfelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitIfelse(this);
		}
	}
